--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </li>
         </ul>
 
-        <a class="btn btn-primary d-block d-lg-inline-block ml-lg-3" href="#!" target="_blank" rel="noopener nofollow">💬 Fale comigo</a>
+        <a class="btn btn-primary d-block d-lg-inline-block ml-lg-3" href="https://api.whatsapp.com/send?phone=5515998039816" target="_blank" rel="noopener nofollow">💬 Fale comigo</a>
 
       </div>
     </nav>
@@ -103,7 +103,7 @@
             </h1>
             <p class="mb-7"><b>UI Designer | Designer Gráfico Júnior.</b> Movido por inspiração e adaptação, conheça um pouco mais da minha paixão por design espelhada nos meus projetos. Vem comigo!</p>
             <a href="#portfolio" class="btn btn-primary scrollto d-block d-md-inline-block mb-3 mb-md-0">💼 Ver portfólio</a>
-            <a href="#" target="_blank" class="btn btn-soft-white d-block ml-md-3 d-md-inline-block">💬 Fale comigo</a>
+            <a href="https://api.whatsapp.com/send?phone=5515998039816" target="_blank" class="btn btn-soft-white d-block ml-md-3 d-md-inline-block">💬 Fale comigo</a>
 
           </div>
           <div class="col-lg-4 offset-lg-2">
@@ -250,13 +250,13 @@
               <a href="#" class="btn btn-sm btn-soft-secondary text-white m-1 px-4 active" data-filter="*">Todos</a>
               <a href="#" class="btn btn-sm btn-soft-secondary text-white m-1 px-4" data-filter=".web">UX/UI Design</a>
               <a href="#" class="btn btn-sm btn-soft-secondary text-white m-1 px-4" data-filter=".branding">Branding</a>
-              <a href="#" class="btn btn-sm btn-soft-secondary text-white m-1 px-4" data-filter=".design">Social Media</a>
+              <!-- <a href="#" class="btn btn-sm btn-soft-secondary text-white m-1 px-4" data-filter=".design">Social Media</a> -->
             </nav>
           </div>
         </div>
         <div class="masonry-container row mx-n4 mt-n6">
 
-          <div class="col-sm-6 col-lg-6 px-4 pt-6 masonry-item web">
+          <div class="col-sm-6 col-lg-6 px-4 pt-6 masonry-item web branding">
             <a class="card border-0 rounded-3x overflow-hidden shadow-light hover-parent" href="portfolio-panini.html">
               <div class="h--96 position-relative">
                 <div class="overlay overlay-advanced">
@@ -292,7 +292,7 @@
             </a>
           </div>
 
-          <div class="col-sm-6 col-lg-6 px-4 pt-6 masonry-item web">
+          <!-- <div class="col-sm-6 col-lg-6 px-4 pt-6 masonry-item web">
             <a class="card border-0 rounded-3x overflow-hidden shadow-light hover-parent" href="dark-portfolio-single-1.html">
               <div class="h--96 position-relative">
                 <div class="overlay overlay-advanced">
@@ -398,7 +398,7 @@
                 </div>
               </div>
             </a>
-          </div>
+          </div> -->
 
         </div>
       </div>
@@ -531,7 +531,7 @@
     </section> -->
 
     <!-- Contact -->
-    <section id="contact" class="py-9 py-xl-12">
+    <!-- <section id="contact" class="py-9 py-xl-12">
       <div class="overlay overlay-advanced bg-primary mt-xl-n3"></div>
       <div class="container text-white">
         <br><br>
@@ -624,7 +624,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
+
+    <br><br><br>
 
     <!-- Footer -->
     <footer class="position-relative py-9 py-lg-12 bg-dark text-gray-500">
@@ -632,10 +634,10 @@
         <div class="row">
           <div class="col-lg-10 mx-auto text-center">
             <img src="assets/images/logo-white2.png" alt="" class="img-fluid mb-5">
-            <p class="text-gray-400 mb-5">Bootstrap Portfolio Template and UI kit that will help you prototype and design beautiful, creative and modern websites.</p>
+            <!-- <p class="text-gray-400 mb-5">Bootstrap Portfolio Template and UI kit that will help you prototype and design beautiful, creative and modern websites.</p> -->
             <ul class="list-inline mb-8">
 
-              <li class="list-inline-item mx-0">
+              <!-- <li class="list-inline-item mx-0">
                 <a class="btn btn-sm btn-icon btn-soft-secondary text-gray-400" href="#!" tabindex="0">
                   <i class="fab fa-facebook-f btn-icon-inner"></i>
                 </a>
@@ -645,22 +647,21 @@
                 <a class="btn btn-sm btn-icon btn-soft-secondary text-gray-400" href="#!" tabindex="0">
                   <i class="fab fa-twitter btn-icon-inner"></i>
                 </a>
-              </li>
+              </li> -->
 
               <li class="list-inline-item mx-0">
-                <a class="btn btn-sm btn-icon btn-soft-secondary text-gray-400" href="#!" tabindex="0">
+                <a class="btn btn-sm btn-icon btn-soft-secondary text-gray-400" target="_blank" href="https://www.linkedin.com/in/claudioduclos/" tabindex="0">
                   <i class="fab fa-linkedin-in btn-icon-inner"></i>
                 </a>
               </li>
 
-              <li class="list-inline-item mx-0">
+              <!-- <li class="list-inline-item mx-0">
                 <a class="btn btn-sm btn-icon btn-soft-secondary text-gray-400" href="#!" tabindex="0">
                   <i class="fab fa-dribbble btn-icon-inner"></i>
                 </a>
-              </li>
+              </li> -->
 
             </ul>
-            <p class="mb-0">Copyright © Erilisdesign.com 2020. All rights reserved.</p>
           </div>
         </div>
       </div>
