--- a/portfolio-panini.html
+++ b/portfolio-panini.html
@@ -224,11 +224,11 @@
       <div class="container px-xl-10">
         <div class="row">
           <div class="col-lg-10 mx-auto text-center">
-            <img src="assets/images/logo-white.png" alt="" class="img-fluid mb-5">
-            <p class="text-gray-400 mb-5">Bootstrap Portfolio Template and UI kit that will help you prototype and design beautiful, creative and modern websites.</p>
+            <img src="assets/images/logo-white2.png" alt="" class="img-fluid mb-5">
+            <!-- <p class="text-gray-400 mb-5">Bootstrap Portfolio Template and UI kit that will help you prototype and design beautiful, creative and modern websites.</p> -->
             <ul class="list-inline mb-8">
 
-              <li class="list-inline-item mx-0">
+              <!-- <li class="list-inline-item mx-0">
                 <a class="btn btn-sm btn-icon btn-soft-secondary text-gray-400" href="#!" tabindex="0">
                   <i class="fab fa-facebook-f btn-icon-inner"></i>
                 </a>
@@ -238,22 +238,21 @@
                 <a class="btn btn-sm btn-icon btn-soft-secondary text-gray-400" href="#!" tabindex="0">
                   <i class="fab fa-twitter btn-icon-inner"></i>
                 </a>
-              </li>
+              </li> -->
 
               <li class="list-inline-item mx-0">
-                <a class="btn btn-sm btn-icon btn-soft-secondary text-gray-400" href="#!" tabindex="0">
+                <a class="btn btn-sm btn-icon btn-soft-secondary text-gray-400" target="_blank" href="https://www.linkedin.com/in/claudioduclos/" tabindex="0">
                   <i class="fab fa-linkedin-in btn-icon-inner"></i>
                 </a>
               </li>
 
-              <li class="list-inline-item mx-0">
+              <!-- <li class="list-inline-item mx-0">
                 <a class="btn btn-sm btn-icon btn-soft-secondary text-gray-400" href="#!" tabindex="0">
                   <i class="fab fa-dribbble btn-icon-inner"></i>
                 </a>
-              </li>
+              </li> -->
 
             </ul>
-            <p class="mb-0">Copyright © Erilisdesign.com 2020. All rights reserved.</p>
           </div>
         </div>
       </div>
