--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
             </a>
           </div>
 
-          <div class="col-sm-6 col-lg-6 px-4 pt-6 masonry-item web">
+          <!-- <div class="col-sm-6 col-lg-6 px-4 pt-6 masonry-item web">
             <a class="card border-0 rounded-3x overflow-hidden shadow-light hover-parent" href="dark-portfolio-single-1.html">
               <div class="h--96 position-relative">
                 <div class="overlay overlay-advanced">
@@ -290,7 +290,7 @@
                 </div>
               </div>
             </a>
-          </div>
+          </div> -->
 
           <!-- <div class="col-sm-6 col-lg-6 px-4 pt-6 masonry-item web">
             <a class="card border-0 rounded-3x overflow-hidden shadow-light hover-parent" href="dark-portfolio-single-1.html">
