--- a/portfolio-panini.html
+++ b/portfolio-panini.html
@@ -4,11 +4,12 @@
 
     <!-- Title -->
     <title>UI Designer | Claudio Duclos</title>
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
 
     <!-- Required Meta Tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Bootstrap HTML template and UI kit by Erilisdesign">
+    <meta name="description" content="Confira meu portfólio de UI/UX">
 
     <!-- Libs CSS -->
     <link rel="stylesheet" href="assets/vendor/bootstrap/dist/css/bootstrap.min.css" type="text/css">
