--- a/portfolio-panini.html
+++ b/portfolio-panini.html
@@ -71,9 +71,9 @@
           <!-- <li class="nav-item">
             <a class="nav-link scrollto" href="#blog">Blog</a>
           </li> -->
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link scrollto" href="index.html#contact">Contato</a>
-          </li>
+          </li> -->
         </ul>
 
         <a class="btn btn-primary d-block d-lg-inline-block ml-lg-3" href="#!" target="_blank" rel="noopener nofollow">💬 Fale comigo</a>
